--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
+        "intervention/image": "^2.7",
         "laravel/breeze": "^1.26",
         "laravel/framework": "^10.10",
         "laravel/pulse": "^1.0@beta",
